must-gather.local.5629786973073760676/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-b74b27084f7dce35282f849aca3b99d79a6cead0a3a4046bf66c4953c296daba/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/network-node-identity.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2025-03-31T20:29:15Z"
  generation: 1
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:ownerReferences:
          k:{"uid":"f247aa7f-5271-4e41-99c9-6fc4166400fb"}: {}
      f:webhooks:
        k:{"name":"node.network-node-identity.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:caBundle: {}
            f:url: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
        k:{"name":"pod.network-node-identity.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:caBundle: {}
            f:url: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
    manager: cluster-network-operator/operconfig
    operation: Apply
    time: "2025-03-31T20:29:15Z"
  name: network-node-identity.openshift.io
  ownerReferences:
  - apiVersion: operator.openshift.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Network
    name: cluster
    uid: f247aa7f-5271-4e41-99c9-6fc4166400fb
  resourceVersion: "63715"
  uid: d867b0d1-c33e-44fc-9819-b14095bf40df
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnVENDQW1tZ0F3SUJBZ0lJSnN2eGNhTmFuYzh3RFFZSktvWklodmNOQVFFTEJRQXdUakZNTUVvR0ExVUUKQXd4RGIzQmxibk5vYVdaMExXNWxkSGR2Y21zdGJtOWtaUzFwWkdWdWRHbDBlVjl1WlhSM2IzSnJMVzV2WkdVdAphV1JsYm5ScGRIa3RZMkZBTVRjME16UTFNak14TXpBZUZ3MHlOVEF6TXpFeU1ERTRNek5hRncwek5UQXpNamt5Ck1ERTRNelJhTUU0eFREQktCZ05WQkFNTVEyOXdaVzV6YUdsbWRDMXVaWFIzYjNKckxXNXZaR1V0YVdSbGJuUnAKZEhsZmJtVjBkMjl5YXkxdWIyUmxMV2xrWlc1MGFYUjVMV05oUURFM05ETTBOVEl6TVRNd2dnRWlNQTBHQ1NxRwpTSWIzRFFFQkFRVU [...]
    url: https://127.0.0.1:9743/node
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: node.network-node-identity.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - UPDATE
    resources:
    - nodes/status
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnVENDQW1tZ0F3SUJBZ0lJSnN2eGNhTmFuYzh3RFFZSktvWklodmNOQVFFTEJRQXdUakZNTUVvR0ExVUUKQXd4RGIzQmxibk5vYVdaMExXNWxkSGR2Y21zdGJtOWtaUzFwWkdWdWRHbDBlVjl1WlhSM2IzSnJMVzV2WkdVdAphV1JsYm5ScGRIa3RZMkZBTVRjME16UTFNak14TXpBZUZ3MHlOVEF6TXpFeU1ERTRNek5hRncwek5UQXpNamt5Ck1ERTRNelJhTUU0eFREQktCZ05WQkFNTVEyOXdaVzV6YUdsbWRDMXVaWFIzYjNKckxXNXZaR1V0YVdSbGJuUnAKZEhsZmJtVjBkMjl5YXkxdWIyUmxMV2xrWlc1MGFYUjVMV05oUURFM05ETTBOVEl6TVRNd2dnRWlNQTBHQ1NxRwpTSWIzRFFFQkFRVU [...]
    url: https://127.0.0.1:9743/pod
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: pod.network-node-identity.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - UPDATE
    resources:
    - pods/status
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
